[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
kvm-bindings = "0.5.0"
kvm-ioctls = "0.11.0"
memmap2 = "0.5.3"
object = { version = "0.28.3", features = ["elf", "read"], default-features = false }
parking_lot = "0.12.0"

[features]
